--- a/buildSrc/src/main/resources/flavor-config.properties
+++ b/buildSrc/src/main/resources/flavor-config.properties
@@ -1,7 +1,7 @@
 ## App名称
-APP_NAME=NiceHub
+APP_NAME=WanAndroid
 ## app application id
-APPLICATION_ID=com.zhuzichu.android.nicehub
+APPLICATION_ID=com.zhuzichu.android.wan
 ## 版本名称
 APP_VERSION_NAME=1.0
 ## 版本号
