--- a/app/build.groovy.gradle
+++ b/app/build.groovy.gradle
@@ -78,7 +78,7 @@ android {
             ])
         }
 
-        armeabi {
+        arm {
             dimension "cpu"
             ndk {
                 abiFilters "armeabi-v7a"
