--- a/app/build.groovy.gradle
+++ b/app/build.groovy.gradle
@@ -128,7 +128,12 @@ android {
                 srcDir 'src/main/kotlin'
             }
             jniLibs.srcDirs = ["src/main/cpp/libs"]
-            res.srcDirs("src/main/res-opencv", "src/main/res-jni","src/main/res-ffmpeg")
+            res.srcDirs(
+                    "src/main/res-opencv",
+                    "src/main/res-jni",
+                    "src/main/res-ffmpeg",
+                    "src/main/res-websocket"
+            )
         }
     }
     externalNativeBuild {
