--- a/gradle.properties
+++ b/gradle.properties
@@ -21,27 +21,27 @@ android.enableJetifier=true
 kotlin.code.style=official
 kapt.incremental.apt=true
 #===================================================================================================
-##======== Jenkins¿ØÖÆÃæ°åÅäÖÃĞÅÏ¢
-# ÇşµÀÃû³Æ£¨ÖµÓĞ£ºGooglePlay£©
+##======== Jenkinsæ§åˆ¶é¢æ¿é…ç½®ä¿¡æ¯
+# æ¸ é“åç§°ï¼ˆå€¼æœ‰ï¼šGooglePlayï¼‰
 PRODUCT_CHANNEL=GooglePlay
-# ÊÇ·ñJenkins´ò°ü·½Ê½£¬ÖµÓĞ£ºtrue¡¢false£¬Ä¬ÈÏfalse¡£(×¢Òâ£º¸ÃÅäÖÃ²»Ö§³ÖÔÚlocal.propertiesÎÄ¼şÖĞÖØ¶¨Òå)
+# æ˜¯å¦Jenkinsæ‰“åŒ…æ–¹å¼ï¼Œå€¼æœ‰ï¼štrueã€falseï¼Œé»˜è®¤falseã€‚(æ³¨æ„ï¼šè¯¥é…ç½®ä¸æ”¯æŒåœ¨local.propertiesæ–‡ä»¶ä¸­é‡å®šä¹‰)
 IS_JENKINS=false
-# AppÔËĞĞ»·¾³(ÖµÓĞ£ºweekly,beta,release¡£±È½ÏÌØÊâµÄÊÇemergencyÔÚ´úÂëÖĞÒ²ÊÇweekly»·¾³)
+# Appè¿è¡Œç¯å¢ƒ(å€¼æœ‰ï¼šweekly,beta,releaseã€‚æ¯”è¾ƒç‰¹æ®Šçš„æ˜¯emergencyåœ¨ä»£ç ä¸­ä¹Ÿæ˜¯weeklyç¯å¢ƒ)
 ENVIRONMENT=release
-##================ gradle °æ±¾ĞÅÏ¢
-# gradle ²å¼ş°æ±¾
+##================ gradle ç‰ˆæœ¬ä¿¡æ¯
+# gradle æ’ä»¶ç‰ˆæœ¬
 LOCAL_GRADLE_PLUGIN_VERSION=3.5.2
 #
-##================ apk °æ±¾ĞÅÏ¢
-# ±àÒëSDK°æ±¾
+##================ apk ç‰ˆæœ¬ä¿¡æ¯
+# ç¼–è¯‘SDKç‰ˆæœ¬
 COMPILE_SDK_VERSION=29
-# Ä¿±êSDK°æ±¾
+# ç›®æ ‡SDKç‰ˆæœ¬
 TARGET_SDK_VERSION=29
-# ×îĞ¡SDK°æ±¾
+# æœ€å°SDKç‰ˆæœ¬
 MIN_SDK_VERSION=23
-# Appºó¶Ë·şÎñÆ÷µØÖ·£¬Èç£º"http://172.31.11.248:8084"£¬Ä¬ÈÏNone¡£
+# Appåç«¯æœåŠ¡å™¨åœ°å€ï¼Œå¦‚ï¼š"http://172.31.11.248:8084"ï¼Œé»˜è®¤Noneã€‚
 APP_SERVER_URL=None
-## Apk¹¹½¨ÀàĞÍ(ÖµÓĞ£ºDebug »ò Release)
+## Apkæ„å»ºç±»å‹(å€¼æœ‰ï¼šDebug æˆ– Release)
 BUILD_TYPE=Debug
-# ÕıÊ½Ç©ÃûÅäÖÃÂ·¾¶£¬Ä¬ÈÏÖµNone
+# æ­£å¼ç­¾åé…ç½®è·¯å¾„ï¼Œé»˜è®¤å€¼None
 RELEASE_SIGN_CONFIGS_PATH=None
