--- a/app/build.groovy.gradle
+++ b/app/build.groovy.gradle
@@ -124,17 +124,15 @@ android {
     }
 
     sourceSets {
+        def resDirs = ['res-opencv', 'res-jni', 'res-ffmpeg', 'res-websocket']
         main {
             java {
                 srcDir 'src/main/kotlin'
             }
             jniLibs.srcDirs = ["src/main/cpp/libs"]
-            res.srcDirs(
-                    "src/main/res-opencv",
-                    "src/main/res-jni",
-                    "src/main/res-ffmpeg",
-                    "src/main/res-websocket"
-            )
+            resDirs.forEach { dir ->
+                res.srcDirs("src/main/${dir}")
+            }
         }
     }
     externalNativeBuild {
