--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,8 @@
 
         <activity android:name=".ui.web.ActivityWeb" />
 
+        <activity android:name=".ui.camera.ActivityCamera" />
+
     </application>
 
 </manifest>
