--- a/dep/build.gradle
+++ b/dep/build.gradle
@@ -65,7 +65,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.60"
 
-    implementation "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.0-rc04"
+    implementation "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.0"
 
     implementation "androidx.databinding:databinding-compiler:3.5.3"
 
@@ -77,9 +77,9 @@ dependencies {
 
     implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta4"
 
-    implementation "androidx.navigation:navigation-fragment-ktx:2.2.0-rc4"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.2.0"
 
-    implementation "androidx.navigation:navigation-ui-ktx:2.2.0-rc4"
+    implementation "androidx.navigation:navigation-ui-ktx:2.2.0"
 
     implementation "com.github.zhuzichu520:widget:1.0.39"
 
@@ -93,20 +93,19 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.60"
 
-    implementation "com.google.android.material:material:1.1.0-beta02"
-    implementation "com.google.android.material:material:1.2.0-alpha03"
+    implementation "com.google.android.material:material:1.2.0-alpha04"
 
-    implementation "com.squareup.okhttp3:okhttp:3.10.0"
+    implementation "com.squareup.okhttp3:okhttp:3.12.0"
 
-    implementation "com.squareup.okhttp3:logging-interceptor:3.10.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.12.0"
 
-    implementation "com.squareup.retrofit2:retrofit:2.4.0"
+    implementation "com.squareup.retrofit2:retrofit:2.5.0"
 
-    implementation "com.squareup.retrofit2:converter-gson:2.4.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
 
-    implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
 
-    implementation "com.squareup.retrofit2:converter-scalars:2.4.0"
+    implementation "com.squareup.retrofit2:converter-scalars:2.5.0"
 
     implementation "io.reactivex.rxjava2:rxjava:2.2.12"
 
@@ -135,4 +134,8 @@ dependencies {
     implementation "com.github.bumptech.glide:compiler:4.10.0"
 
     implementation "com.jakewharton.timber:timber:4.7.1"
+
+    implementation "androidx.camera:camera-core:1.0.0-alpha05"
+
+    implementation "com.github.tbruyelle:rxpermissions:0.10.2"
 }
