--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         android:supportsRtl="true"
         android:theme="@style/MyTheme.DayNight"
         android:usesCleartextTraffic="true"
-        tools:replace="android:icon,android:label,android:allowBackup">
+        tools:replace="android:label,android:allowBackup">
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
