--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,9 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 kapt.incremental.apt=true
+
+android.useDeprecatedNdk=true
+
 #===================================================================================================
 ##======== Jenkins控制面板配置信息
 # 渠道名称（值有：GooglePlay）
