--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
             android:required="false" />
 
         <meta-data
+            android:name="android.max_aspect"
+            android:value="2.4" />
+
+        <meta-data
             android:name="design_width_in_dp"
             android:value="432" />
         <meta-data
@@ -59,7 +63,8 @@
             <nav-graph android:value="@navigation/navigation_main" />
         </activity>
 
-        <activity android:name=".ui.launcher.ActivityLauncher"
+        <activity
+            android:name=".ui.launcher.ActivityLauncher"
             android:theme="@style/Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
