--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,9 @@
             <nav-graph android:value="@navigation/navigation_main" />
         </activity>
 
-        <activity android:name=".ui.launcher.ActivityLauncher">
+        <activity
+            android:name=".ui.launcher.ActivityLauncher"
+            android:theme="@style/MyTheme.TransparentTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
