--- a/dep/build.gradle
+++ b/dep/build.gradle
@@ -150,4 +150,6 @@ dependencies {
     implementation 'com.github.tony19:logback-android:2.0.0'
 
     implementation "androidx.multidex:multidex:2.0.0"
+
+    implementation 'com.tencent:mmkv-static:1.0.24'
 }
