--- a/wan_flutter/pubspec.yaml
+++ b/wan_flutter/pubspec.yaml
@@ -82,5 +82,5 @@ flutter:
   # identifiers, which may be completely independent or the same as these.
   module:
     androidX: true
-    androidPackage: com.zhuzichu.android.wan
-    iosBundleIdentifier: com.zhuzichu.ios.wan
+    androidPackage: com.zhuzichu.android.flutter
+    iosBundleIdentifier: com.zhuzichu.ios.flutter
