--- a/widget/build.gradle
+++ b/widget/build.gradle
@@ -33,8 +33,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.61"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'com.github.zhuzichu520:libs:1.0.30'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation project(path: ':libs')
 }
 
 buildscript {
