--- a/libs/build.gradle
+++ b/libs/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'com.github.dcendents.android-maven'
 
+group='com.zhuzichu.android'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
