--- a/widget/build.gradle
+++ b/widget/build.gradle
@@ -6,7 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'com.github.dcendents.android-maven'
 
-group='com.zhuzichu.android'
+group = 'com.zhuzichu.android'
+version = '1.0.0'
 
 android {
     compileSdkVersion 29
