--- a/app/build.groovy.gradle
+++ b/app/build.groovy.gradle
@@ -148,7 +148,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     api project(path: ':shared')
     implementation project(path: ':vxposed')
-    implementation project(path: ':flutter')
+//    implementation project(path: ':flutter')
     kapt(Dep.kaptRoomCompiler)
     kapt(Dep.kaptDaggerCompiler)
     kapt(Dep.kaptDaggerProcessor)
